# Real_Time_Posture_Analysis_RL_Project

./: .gitignore  README.md  UPRYT_v2_Documentation.docx  USAGE_GUIDE.md  algorithm_selector.py  attention_tracker.py  audio_alerts.py  combined_analyzer.py  config.py  environment.py  feedback.py  gui_app.py  hand_tracker.py  main.py  online_learning.py  pose_module.py  posture_module.py  pyproject.toml  requirements.txt  rl_agent.py  rl_ppo_agent.py  run_app.bat  run_console.bat  setup.py  simulation.py  simulation_enhanced.py  test_system.py  user_profiles.py  utils.py  visualize_results.py  web_dashboard.py
.claude/: settings.local.json
backend/: __init__.py  app.py  camera_rl.py  camera_rl_capture.py  camera_rl_utils.py
docs/: UPRYT_Knowledge_Base.docx  UPRYT_Research_Paper_Enhanced.docx
frontend/: index.html  vite.config.js
frontend/src/: App.css  (+2 more)
logs/: session_20260328_113003.json
mobile_app/: Dockerfile  README.md  build.bat  build.sh  buildozer.spec  main.py  posture_detector.py  posture_screen.kv  requirements.txt
model/: camera_rl.py  camera_rl_capture.py  camera_rl_utils.py
models/: dqn_best.pth  dqn_current.pth  dqn_ep100.pth  dqn_ep1000.pth  dqn_ep1200.pth  dqn_ep1400.pth  dqn_ep1600.pth  dqn_ep1800.pth  dqn_ep200.pth  dqn_ep300.pth  dqn_ep400.pth  dqn_ep500.pth  dqn_ep600.pth  dqn_ep700.pth  dqn_ep800.pth  dqn_ep900.pth  dqn_final.pth  ppo_best.pth  ppo_current.pth  ppo_ep100.pth  ppo_ep1000.pth  ppo_ep1200.pth  ppo_ep1400.pth  ppo_ep1600.pth  ppo_ep1800.pth  ppo_ep200.pth  ppo_ep300.pth  ppo_ep400.pth  ppo_ep500.pth  ppo_ep600.pth  ppo_ep700.pth  ppo_ep800.pth  ppo_ep900.pth  ppo_final.pth
results/: dqn_20260402_232527.json  dqn_20260409_112554.json  ppo_20260402_231921.json  ppo_20260402_233027.json  ppo_20260409_112048.json
venv311/: pyvenv.cfg
(+9 files in other folders)
